# Light-Show-Maker

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md  appveyor.yml  changelog.md  changelog.txt  info.txt
.github/workflows/: ccpp.yml
cmake/: find_directories_containing.cmake  glad.cmake  glfw.cmake  imgui.cmake  setup.cmake
libs/: CMakeLists.txt
libs/ffmpeg/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: CMakeLists.txt  README.md
src/core/: CMakeLists.txt  base64.cpp  base64.h  core.cpp  core.h  str-utils.h  use_glad.h
src/editor/: CMakeLists.txt  DecorationDragger.cpp  DecorationDragger.h  Editor.cpp  Editor.h  KeypointDragger.cpp  KeypointDragger.h  MultiKeypointDragger.cpp  MultiKeypointDragger.h  OutputVideoEditor.cpp  OutputVideoEditor.h  ProjectWindow.cpp  ProjectWindow.h  PropertyPanel.cpp  PropertyPanel.h  ScrollablePane.cpp  ScrollablePane.h  TimelineEditor.cpp  TimelineEditor.h
src/lightshowmaker/: Application.cpp  Application.h  CMakeLists.txt  GlobalHotKey.cpp  GlobalHotKey.h  HistoryManager.cpp  HistoryManager.h  Player.cpp  Player.h  ProjectExporter.cpp  ProjectExporter.h  ResourceManager.cpp  ResourceManager.h  Selection.cpp  Selection.h  configLoader.cpp  dpi.h  main.cpp
src/media/: AudioDevice.cpp  AudioDevice.h  AudioLoader.cpp  AudioLoader.h  CMakeLists.txt  ImageLoader.cpp  ImageLoader.h  ffmpeg.h
src/model/: CMakeLists.txt  Canvas.cpp  Canvas.h  Decoration.cpp  Decoration.h  ExternalResource.cpp  ExternalResource.h  Fade.cpp  Fade.h  KeyPoint.cpp  KeyPoint.h  Layer.cpp  Layer.h  LightGroup.cpp  LightGroup.h  Project.cpp  Project.h  SelectableItem.cpp  SelectableItem.h  Serialization.h  Settings.cpp  Settings.h
src/project/: CMakeLists.txt  Decoration.cpp  Fade.cpp  KeyPoint.cpp  KeyPoint.h  LightGroup.cpp  LightGroup.h  Project.cpp  Project.h  Settings.h
src/showmaker/: Application.cpp  Application.h  CMakeLists.txt  GlobalHotKey.cpp  Player.cpp  Player.h  ProjectWindow.cpp  ProjectWindow.h  Selection.h  configLoader.cpp  configLoader.h  dpi.cpp  main.cpp
